# failover_cluster

./: CMakeLists.txt  README.md  package.xml
include/fail_demo/: lifecycle_heartbeat.hpp  lifecycle_talker.hpp  lifecycle_watchdog.hpp  simple_heartbeat.hpp  simple_watchdog.hpp  talker_component.hpp
launch/: failover_demo.launch.py
src/: .manual_composition.cpp.kate-swp  .simple_heartbeat.cpp.swp  lifecycle_heartbeat.cpp  lifecycle_talker.cpp  lifecycle_watchdog.cpp  manual_composition.cpp  simple_heartbeat.cpp  simple_watchdog.cpp  talker_component.cpp
